# clawhdf5_mirror

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPROVEMENT_LOG.md  README.md
crates/clawhdf5/: Cargo.toml  README.md
crates/clawhdf5-accel/: README.md
crates/clawhdf5-accel/src/: avx2.rs  lib.rs  neon.rs
crates/clawhdf5-agent/: Cargo.toml  README.md
crates/clawhdf5-agent/benches/: bench.rs  memory_bench.rs
crates/clawhdf5-agent/src/: accelerate_search.rs  async_memory.rs  blas_search.rs  bm25.rs  confidence.rs  consolidation.rs  ephemeral.rs  gpu_search.rs  hybrid.rs  lib.rs  multimodal.rs  openclaw.rs  pq.rs  provenance.rs  search.rs  storage.rs  vector_search.rs  wal.rs
crates/clawhdf5-agent/tests/: e2e_tests.rs  hnsw_integration.rs  memx_comparison.rs  stress_tests.rs
crates/clawhdf5-android/src/: lib.rs
crates/clawhdf5-ann/: README.md
crates/clawhdf5-ann/src/: hnsw.rs
crates/clawhdf5-cli/src/: main.rs
crates/clawhdf5-derive/: README.md
crates/clawhdf5-filters/: README.md
crates/clawhdf5-filters/benches/: compression_bench.rs  deflate_bench.rs
crates/clawhdf5-filters/src/: fast_deflate.rs
crates/clawhdf5-format/: Cargo.toml  README.md
crates/clawhdf5-format/benches/: bench.rs  hash_bench.rs  parallel_decompress_bench.rs  parse_hash_bench.py  run_hash_bench.sh
crates/clawhdf5-format/benches/results/: baselines-capability-matrix-localhost.localdomain.md  baselines-explanatory-note-localhost.localdomain.md  baselines-localhost.localdomain.csv  hash-bench-explanatory-note-localhost.localdomain.md  hash-bench-localhost.localdomain.csv  parallel-build-DESKTOP-0N3E8CV.csv  parallel-build-explanatory-note.md  parallel-build-localhost.localdomain.csv
crates/clawhdf5-format/examples/: gen_merkle_vectors.rs  hash_bench_harness.rs  parallel_build_bench.rs  write_merkle_test.rs
crates/clawhdf5-format/fuzz/: Cargo.toml
crates/clawhdf5-format/fuzz/fuzz_targets/: fuzz_merkle_attr.rs
crates/clawhdf5-format/src/: baselines.rs  chunked_write.rs  data_layout.rs  data_read.rs  datatype.rs  filters.rs  fixed_array.rs  fractal_heap.rs  lib.rs  merkle.rs  provenance.rs  selection.rs  type_builders.rs
crates/clawhdf5-format/test-vectors/: merkle-vectors.json  p1.3-h5dump.txt
crates/clawhdf5-format/tests/: integration_test.rs  writer_h5py_tests.rs
crates/clawhdf5-format/tests/fixtures/: fractal_heap_multiblock.h5  scaleoffset_float_escale.h5  v4_fixed_array_paged.h5  vds_2d_same_file.h5  vds_external_src.h5  vds_external_virt.h5  vds_same_file.h5
crates/clawhdf5-gpu/: README.md
crates/clawhdf5-gpu/tests/: gpu_tests.rs
crates/clawhdf5-io/: README.md
crates/clawhdf5-io/src/: hsds.rs  lib.rs
crates/clawhdf5-migrate/: README.md
crates/clawhdf5-migrate/src/: hdf5_writer.rs  main.rs  sqlite_reader.rs
crates/clawhdf5-netcdf4/: README.md
crates/clawhdf5-netcdf4/src/: dimension.rs  lib.rs  variable.rs
crates/clawhdf5-py/: Cargo.toml  README.md  build.rs
crates/clawhdf5-py/src/: attrs.rs  dataset.rs  file.rs  group.rs  lib.rs
crates/clawhdf5-types/: README.md
crates/clawhdf5/benches/: mmap_bench.rs  parallel_bench.rs
crates/clawhdf5/examples/: baselines_bench.rs  generate_10gb.rs  goes18_chunk_test.rs  uncompress_goes.rs
crates/clawhdf5/src/: lazy.rs  mmap_file.rs  reader.rs  types.rs
crates/clawhdf5/tests/: chunk_modify_test.rs  integration_tests.rs  parallel_integration.rs
docs/: NOAA_DATA.md  PR_REVIEW_CHECKLIST.md  PR_REVIEW_PROMPT.md  mpi-protocol.md
scripts/: review-pr.sh
test-vectors/: README.md  gen_synthetic.rs
